fix(dropdowns): z-index issues
* adds container position/styling to fix z-index issues across dropdowns

--- a/src/stories/select/Select.module.scss
+++ b/src/stories/select/Select.module.scss
@@ -24,11 +24,6 @@
     align-items: center;
 }
 
-.transitionContainer {
-    position: relative;
-    z-index: 10;
-}
-
 .options {
     max-height: var(--options-maxHeight, auto);
     overflow-y: auto;
